# skill-driven-agent-framework

./: .gitignore  BUILDER_GUIDE.md  CLAUDE.md  README.md  TECH_REPORT.md  USAGE_GUIDE.md  chat_with_agent.py  chat_with_builder_agent.py  chat_with_fea_agent.py  chat_with_research_agent.py  chat_with_technical_interview_assistant_agent.py  demo_memory_sedimentation.py  demo_progressive_disclosure.py  pyproject.toml  简要需求.md  项目调研书.md
agent_framework/: __init__.py
agent_framework/agents/: __init__.py
agent_framework/bootstrap/: __init__.py  injector.py  loader.py  models.py
agent_framework/builders/: __init__.py  models.py  service.py  templates.py
agent_framework/config/: __init__.py  env.py  mimo_token_plan.py  settings.py
agent_framework/core/: __init__.py  agent.py  events.py  gateway.py  graph.py  session_manager.py  state.py  subagents.py  workflow.py
agent_framework/mcp/: __init__.py  adapter.py  client.py  schemas.py  tool_node.py
agent_framework/memory/: __init__.py  compactor.py  flush.py  long_term.py  manager.py  models.py  psych_mem.py  short_term.py  sqlite_backend.py  summarizer.py
agent_framework/plugins/: __init__.py  loader.py  models.py
agent_framework/skills/: __init__.py  loader.py  models.py  registry.py  router.py  runtime.py
agent_framework/soul/: __init__.py  loader.py  models.py
agent_framework/tools/: __init__.py  approval.py  audit.py  basic.py  executor.py  file_tools.py  models.py  policy.py  registry.py  validated_tool_node.py
agent_framework/workflows/: __init__.py
stp/: arm_single_clean.stp  beam_sample_001.stp
(+105 files in other folders)
