[project]
name = "agent-framework"
version = "0.1.0"
description = "A Python agent framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langgraph",
    "langchain",
    "pydantic",
    "mcp",
    "langchain-openai",
    "ruamel.yaml",
    "langchain-community",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
