[project]
name = "agent-framework"
version = "0.1.0"
description = "A Python agent framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "langchain",
    "pydantic",
    "mcp",
    "langchain-openai",
    "ruamel.yaml",
    "langchain-community",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
